Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjBoolObj.quorum
class main
    action Main
        Boolean b
        Integer int
        b:SetValue(true)
        int = cast(Integer, b)
    end
end